# blanks_checker

./: .env.example  .gitignore  README.md  alignment.py  cell_ocr.py  docker-compose.yml  eval_batch_config.py  evaluate_cell_ocr.py  image_utils.py  main.py  pdf_loader.py  pyproject.toml  rows.py  run_batch_eval.py  test_cell_ocr.py
alignment/: __init__.py  align.py  markers.py  warp.py
backend/: Dockerfile  alembic.ini  evaluate_cell_ocr.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 814efd068190_add_version_lifecycle_state.py  9d1fa29abceb_add_users_and_recognized_blanks.py  a1b2c3d4e5f6_ingested_batches_s3_metadata.py  b7c8d9e0f1a2_add_source_filename_to_recognized_blanks.py  c5e6f7a8b9c0_add_user_login.py  d8e9f0a1b2c3_add_verified_to_recognized_blanks.py  de4b46fabff2_add_ingest_metadata_tables.py
backend/app/: main.py  pipeline.py
backend/app/alignment/: __init__.py  align.py  warp.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  logger.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/ocr/: cell_ocr.py
backend/app/preprocessing/: image_utils.py
backend/app/rows/: __init__.py  cells.py  config.py  extract.py  grid.py  header.py  line_clean.py
backend/app/schemas/: __init__.py  api.py  auth.py  blank_check.py  inference.py  ingestion.py  model.py  monitoring.py  status.py
backend/app/services/: auth.py  export_blanks.py  number_validation.py  pdf_loader.py  pipeline.py  recognized_blanks.py  state.py
backend/app/storage/: s3.py
backend/app/utils/: format.py
backend/scripts/: init.sh  migrate.sh
backend/tests/: test_cell_ocr.py
cell_border_clean/: __init__.py  __main__.py  clean.py  config.py  image_utils.py
cell_ocr/: __init__.py  config.py  model.py  preprocess.py
docs/: empty_cell_pipeline_report.md
frontend/: Dockerfile  package-lock.json
frontend/nginx/: nginx.conf
frontend/src/: App.test.jsx  App.tsx  index.css
frontend/src/api/: auth.ts  backendHealth.ts  blankCheck.ts
frontend/src/components/: AppNav.tsx  (+3 more)
rows/: __init__.py  cells.py  debug_utils.py  extract.py  grid.py  header.py  line_clean.py  morphology.py
(+9 files in other folders)
