[project]
name = "form-reader"
version = "0.1.0"
description = "Web application for automatic reading of test forms."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
  "opencv-python>=4.9",
  "numpy>=1.26",
  "pymupdf>=1.24",
  "torch>=2.10.0",
  "timm>=1.0.25",
  "torchvision>=0.25.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8.0",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
